--- a/BirdNames.Dal/BirdNames.Dal.csproj
+++ b/BirdNames.Dal/BirdNames.Dal.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
