--- a/BirdNames.Tool/appsettings.Development.json
+++ b/BirdNames.Tool/appsettings.Development.json
@@ -24,7 +24,7 @@
             {
               "Name": "File",
               "Args": {
-                "path": "c:/temp/logs/BirdNames.Blazor.log",
+                "path": "c:/temp/logs/BirdNames.Tool.log",
                 "rollOnFileSizeLimit": true,
                 "shared": true,
                 "fileSizeLimitBytes": 10480000,
