--- a/BirdNames.Tool/appsettings.Docker.json
+++ b/BirdNames.Tool/appsettings.Docker.json
@@ -3,7 +3,7 @@
   "Serilog": {
     "Using": [ "Serilog.Exceptions", "Serilog", "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
         "System": "Warning",
         "Microsoft": "Warning",
@@ -18,13 +18,13 @@
             {
               "Name": "Console",
               "Args": {
-                "restrictedToMinimumLevel": "Debug"
+                "restrictedToMinimumLevel": "Information"
               }
             },
             {
               "Name": "File",
               "Args": {
-                "path": "c:/temp/logs/BirdNames.Blazor.log",
+                "path": "var/log/BirdNames.Tool.log",
                 "rollOnFileSizeLimit": true,
                 "shared": true,
                 "fileSizeLimitBytes": 10480000,
