--- a/BirdNames.Blazor/appsettings.json
+++ b/BirdNames.Blazor/appsettings.json
@@ -1,9 +1,41 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Exceptions", "Serilog", "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "Console",
+              "Args": {
+                "restrictedToMinimumLevel": "Debug"
+              }
+            },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "c:/temp/logs/BirdNames.Blazor.log",
+                "rollOnFileSizeLimit": true,
+                "shared": true,
+                "fileSizeLimitBytes": 10480000,
+                "rollingInterval": "Year",
+                "retainedFileCountLimit": 5
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithExceptionDetails" ]
+  }
 }
