Only show the admin menu when settings is true

--- a/BirdNames.Blazor/appsettings.Development.json
+++ b/BirdNames.Blazor/appsettings.Development.json
@@ -1,5 +1,6 @@
 {
   "DetailedErrors": true,
+  "ShowAdminMenu": true,
   "Serilog": {
     "Using": [ "Serilog.Exceptions", "Serilog", "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
