Add pre-configured lists and ignore empty families

--- a/BirdNames.Blazor/BirdNames.Blazor.csproj
+++ b/BirdNames.Blazor/BirdNames.Blazor.csproj
@@ -59,6 +59,28 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Update="wwwroot\Files\BirdNames-Australia-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Files\BirdNames-Eurasia-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Files\BirdNames-Europe-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Files\BirdNames-NorthAmerica-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Files\BirdNames-SouthAmerica-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\Files\BirdNames-SouthernAfrica-2023.zip">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Files\" />
   </ItemGroup>
 
 </Project>
